--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,8 +4,7 @@
   bottom: 0;
   color: black;
   display: flex;
-  height: 100px;
-  position: absolute;
+  height: 10%;
   width: 100%;
   justify-content: center;
   z-index: 997;
