--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,11 +1,12 @@
 .header {
+  padding: 0 15px;
   align-items: center;
   background-color: White;
   color: black;
   display: flex;
   height: 100px;
-  justify-content: center;
-  position: absolute;
+  // justify-content: center;
   width: 100%;
+  height: 10%;
   z-index: 997;
 }
