--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,6 +1,19 @@
-.map{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: '100%';
+.leaflet-left .leaflet-control {
+  position: fixed;
+  right: 10px !important;
+  align-items: center;
+  margin: 0;
+  top: 80%;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+.sr-only {
+  display: none;
+}
+.leaflet-control-attribution.leaflet-control a{
+  display: none;
 }
