--- a/src/Components/Select-Satellite/Select-Satellite.scss
+++ b/src/Components/Select-Satellite/Select-Satellite.scss
@@ -1,3 +1,16 @@
-.type-satellite{
-  margin-right: 10px;
+.select-satellite{
+  z-index: 999;
+  display: flex;
+  align-items: center;
+
+  .type-satellite{
+    color: #707070;
+    font-size: 18px;
+    margin-right: 10px;
+  }
+
+  .icon-satellite{
+    width: 30px;
+    margin-right: 15px;
+  }
 }
