--- a/src/Components/Base/Base.scss
+++ b/src/Components/Base/Base.scss
@@ -1,16 +1,16 @@
-.header {
-  padding: 5px 15px;
-  align-items: center;
+.head {
+  padding: 10px 0px;
   background-color: White;
   color: black;
   display: flex;
-  // height: 100px;
   justify-content: space-between;
-  // height: 10%;
   z-index: 997;
 
   .title{
     color: #707070;
     margin: 0;
+  }
+  .bnt{
+    width: 150px;
   }
 }
