--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -1,5 +1,4 @@
-.header {
-    height: 10vh;
-    background-color: #6C7B8B;
-    
+.HeaderComponent {
+  height: 50px;
+  background-color: #6c7b8b;
 }
