--- a/src/Components/SideBar/style.scss
+++ b/src/Components/SideBar/style.scss
@@ -101,7 +101,9 @@
     justify-content: center;
   }
 
-  .modal-geojson {
-    background-color: white !important;
+  .upload {
+    text-align: center;
+    margin-top: 20px;
+    display: block;
   }
 }
