--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -1,4 +1,14 @@
-.HeaderComponent {
-  height: 50px;
-  background-color: #6c7b8b;
+.link {
+  text-decoration: none !important;
+
+  .title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    .text {
+      font-size: 25px;
+      margin-left: 10px;
+    }
+  }
 }
