:lipstick: :heavy_minus_sign: Changing semantic-ui lib for rsuite lib (#42)

--- a/src/View/WebGis/style.scss
+++ b/src/View/WebGis/style.scss
@@ -1,9 +1,11 @@
 .container {
   height: 100% ;
   margin: 0 !important;
+  position: relative;
 
   .col {
     padding: 0 !important;
     margin: 0 !important;
+    height: 100%;
   }
 }
