--- a/src/Components/SideBar/style.scss
+++ b/src/Components/SideBar/style.scss
@@ -12,7 +12,7 @@
     justify-content: center;
 
     .title {
-      font-size: 30px;
+      font-size: 20px;
       margin-left: 10px;
     }
   }
@@ -43,6 +43,8 @@
 
         .title-container {
           width:  100%;
+          margin-bottom: 20px !important;
+
 
           .title {
             font-size: 16px;
@@ -55,6 +57,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          margin-top: 20px !important;
 
           .cloudValue {
             font-size: 16px;
