--- a/src/View/TrainingIA/style.scss
+++ b/src/View/TrainingIA/style.scss
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  height: 95vh;  height: calc(100vh - 50px);
+  height:100vh;
   width: 100%;
   margin: 0 !important;
 
