--- a/src/View/WebGis/style.scss
+++ b/src/View/WebGis/style.scss
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  height: calc(100vh - 50px);
+  height: 100vh;
   width: 100%;
   margin: 0 !important;
   position: relative;
